# src/main/java/com/clean/architecture/adapters/rest/api/DecoratedWebApi.java
@@ -1,7 +1,8 @@
 package com.clean.architecture.adapters.rest.api;
 
 import com.clean.architecture.adapters.rest.controller.UserController;
-import com.generated.swaggerCodegen.api.ExampleApi;
+import com.generated.swaggerCodegen.api.CleanArchitectureApi;
+import com.generated.swaggerCodegen.model.SingleUserBackendResponse;
 import com.generated.swaggerCodegen.model.UserBackendResponse;
 import lombok.AllArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
@@ -11,11 +12,16 @@ import org.springframework.web.bind.annotation.RestController;
 @AllArgsConstructor
 @RestController
 @Slf4j
-public class DecoratedWebApi extends AbstractLoggableApiDecorator implements ExampleApi {
+public class DecoratedWebApi extends AbstractLoggableApiDecorator implements CleanArchitectureApi {
     private final UserController userController;
 
     @Override
-    public ResponseEntity<UserBackendResponse> testEndpoint() {
-        return processing("testEndpoint", userController::testEndpoint);
+    public ResponseEntity<SingleUserBackendResponse> getUserByUid(final String uid) {
+        return processing("getUserByUid", userController::getUserByUid, uid);
+    }
+
+    @Override
+    public ResponseEntity<UserBackendResponse> getAllUsers() {
+        return processing("getAllUsers", userController::getAllUsers);
     }
 }
