# src/main/java/com/clean/architecture/adapters/rest/controller/UserController.java
@@ -1,8 +1,10 @@
 package com.clean.architecture.adapters.rest.controller;
 
-import com.clean.architecture.adapters.rest.presenter.UserPresenter;
-import com.clean.architecture.application.port.in.UserUCase;
-import com.generated.swaggerCodegen.api.ExampleApi;
+import com.clean.architecture.adapters.rest.presenter.user.UserListPresenter;
+import com.clean.architecture.adapters.rest.presenter.user.UserSinglePresenter;
+import com.clean.architecture.application.port.in.UserUCaseDelegate;
+import com.generated.swaggerCodegen.api.CleanArchitectureApi;
+import com.generated.swaggerCodegen.model.SingleUserBackendResponse;
 import com.generated.swaggerCodegen.model.UserBackendResponse;
 import lombok.AllArgsConstructor;
 import org.springframework.http.ResponseEntity;
@@ -10,12 +12,18 @@ import org.springframework.stereotype.Service;
 
 @AllArgsConstructor
 @Service
-public class UserController implements ExampleApi {
-    private final UserPresenter presenter;
-    private final UserUCase uCase;
+public class UserController implements CleanArchitectureApi {
+    private final UserListPresenter listPresenter;
+    private final UserSinglePresenter singlePresenter;
+    private final UserUCaseDelegate delegate;
 
     @Override
-    public ResponseEntity<UserBackendResponse> testEndpoint() {
-        return ResponseEntity.ok(this.presenter.present(this.uCase.getAll()));
+    public ResponseEntity<UserBackendResponse> getAllUsers() {
+        return ResponseEntity.ok(this.listPresenter.present(this.delegate.getAll()));
+    }
+
+    @Override
+    public ResponseEntity<SingleUserBackendResponse> getUserByUid(final String uid) {
+        return ResponseEntity.ok(this.singlePresenter.present(this.delegate.getByUid(uid)));
     }
 }
